# my-resume-or-portfolio

./: Dockerfile  README.md  app.py  deployment.yaml  pyproject.toml  service.yaml  test_app.py
.github/workflows/: python-app.yml
