[tool.poetry]
name = "my-resume-or-portfolio"
version = "0.1.0"
description = ""
authors = ["you"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "*"
uvicorn = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
httpx = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"